fixed dark mode crash

--- a/src/Components/UI/Nav/Navbar.module.css
+++ b/src/Components/UI/Nav/Navbar.module.css
@@ -66,7 +66,7 @@
 }
 
 .nav__menu li a,
-.logout {
+.logout__btn {
   background-color: var(--teal);
   border-radius: var(--border-radius);
   padding: var(--btn-padding);
